[tool.poetry]
name = "python-qa-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pipdeptree = "^2.2.0"
graphviz = "^0.18.2"
pydeps = "^1.10.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
